--- a/CSS/global.css
+++ b/CSS/global.css
@@ -17,7 +17,7 @@ a {
   color: white;
 }
 
-/*headers*/
+/* Headers */
 h1 {
   font-family: 'Roboto Slab', sans-serif;
   font-size: 40px;
@@ -47,7 +47,7 @@ h4 {
   color: black;
 }
 
-/*buttons*/
+/* Buttons */
 .button-one {
   border: none;
   background-color: #428f60;
@@ -81,7 +81,7 @@ h4 {
   transform: scale(1.02, 1.02);
 }
 
-/*navigation bar*/
+/* Navigation bar */
 .navbar {
   width: 100%;
   height: 60px;
@@ -110,7 +110,7 @@ nav a:hover {
   margin-right: auto;
 }
   
-/*flexbox control for sections*/
+/* Flexbox control for sections */
 .sections-container {
   display: flex;
   flex-direction: column;
@@ -127,7 +127,7 @@ nav a:hover {
   justify-content: center;
 }
 
-/*about section*/
+/* About section */
 #welcome-section {
   padding-top: 70px;
 }
@@ -139,7 +139,7 @@ nav a:hover {
   justify-content: center;
 }
 
-/*projects section*/
+/* Projects section */
 #projects {
   padding-top: 20vh;
 }
@@ -217,7 +217,7 @@ nav a:hover {
   transform: rotate(-35deg);
 }
 
-/*skills section*/
+/* Skills section */
 #skills {
   padding-top: 80px;
 }
@@ -229,7 +229,7 @@ nav a:hover {
   justify-content: center;
 }
 
-/*profile link*/
+/* Profile link */
 .profile-links {
   text-decoration: none;
   font-size: 20px;
@@ -237,7 +237,7 @@ nav a:hover {
   margin: 0;
 }
 
-/*footer*/
+/* Footer */
 footer {
   height: 60px;
   text-align: center;
