--- a/CSS/global.css
+++ b/CSS/global.css
@@ -12,39 +12,93 @@ body {
   width: 100%;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
-
-/* Headers */
 h1 {
   font-family: 'Roboto Slab', sans-serif;
-  font-size: 40px;
+  font-size: 26px;
   font-weight: 300;
   margin: 0;
 }
 
 h2 {
   font-family: 'Roboto', sans-serif;
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 300;
-  margin: 0 0 30px 0;
+  margin: 0 0 15px 0;
 }
 
 h3 {
   font-family: 'Roboto', sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 300;
   margin: 10px 0 20px 0;
 }
 
 h4 {
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 400;
   margin: 10px;
   color: black;
+}
+
+p {
+  font-size: 12px;
+  width: 75%;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* Medium */
+@media (min-width: 768px) {
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+  h3 {
+    font-size: 22px
+  }
+
+  h4 {
+    font-size: 16px;
+  }
+
+  p {
+    font-size: 16px;
+    width: 80%;
+  }
+}
+
+/* Large */
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 32px;
+    margin: 0 0 30px 0;
+  }
+
+  h3 {
+    font-size: 22px
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 18px;
+    width: 100%;
+  }
 }
 
 /* Buttons */
@@ -54,7 +108,7 @@ h4 {
   border-radius: 2px;
   color: #fcfcfc;
   outline: none;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   padding: 10px 30px;
   cursor: pointer;
@@ -68,7 +122,7 @@ h4 {
   border-radius: 2px;
   color: #fcfcfc;
   outline: none;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   padding: 10px 30px;
   cursor: pointer;
@@ -76,9 +130,36 @@ h4 {
   margin: 10px;
 }
 
+.button-footer {
+  border: none;
+  background-color: #428f60;
+  border-radius: 2px;
+  color: #fcfcfc;
+  outline: none;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 7px 15px;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  margin: 15px;
+  white-space: nowrap;
+}
+
 .button-one:hover,
 .button-two:hover {
   transform: scale(1.02, 1.02);
+}
+
+/* Large */
+@media (min-width: 1024px) {
+  .button-one,
+  .button-two,
+  .button-footer {
+    font-size: 20px;
+  }
+  .button-footer {
+    padding: 10px 30px;
+  }
 }
 
 /* Navigation bar */
@@ -94,12 +175,40 @@ h4 {
   z-index: 100;
 }
 
+@media (min-width: 768px) {
+  .navbar {
+    height: 70px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .navbar {
+    height: 80px;
+  }
+}
+
 nav a {
   text-decoration: none;
-  font-size: 18px;
   color: white;
-  margin: 0;
-  padding: 20px 15px;
+  margin: 0 0 0 5px;
+  font-size: 12px;
+  padding: 25px 7px;
+}
+
+@media (min-width: 768px) {
+  nav a {
+    font-size: 14px;
+    padding: 27px 10px;
+    margin: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  nav a {
+    font-size: 18px;
+    padding: 30px 15px;
+    margin: 0;
+  }
 }
 
 nav a:hover {
@@ -107,7 +216,7 @@ nav a:hover {
 }
 
 .navbar-name {
-  margin-right: auto;
+  margin: 0 auto 0 0;
 }
   
 /* Flexbox control for sections */
@@ -173,7 +282,19 @@ nav a:hover {
   background-color: black;
   color: black;
   margin: 20px 0 0 0;
-  width: 286px;
+  width: 200px;
+}
+
+@media (min-width: 768px) {
+  .project-tile {
+    width: 180px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .project-tile {
+    width: 286px;
+  }
 }
 
 .project-tile:hover {
@@ -184,6 +305,9 @@ nav a:hover {
 .project-tile img {
   border-radius: 4px 4px 0 0;
   background-color: black;
+  max-width: 100%;
+  display: block;
+  height: auto;
 }
 
 .project-tile-text {
@@ -195,8 +319,22 @@ nav a:hover {
 .project-tile-text p {
   color: #515151;
   margin: 10px;
-  font-size: 16px;
   font-weight: 400;
+  text-align: left;
+}
+
+@media (min-width: 768px) {
+  .project-tile-text p {
+    font-size: 14px;
+    width: auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  .project-tile-text p {
+    font-size: 16px;
+    width: auto;
+  }
 }
 
 .coming-soon {
@@ -232,20 +370,34 @@ nav a:hover {
 /* Profile link */
 .profile-links {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   color: white;
   margin: 0;
 }
 
+/* Large */
+@media (min-width: 1024px) {
+.profile-links{
+    font-size: 20px;
+  }
+}
+
 /* Footer */
 footer {
-  height: 60px;
+  height: 10%;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #449bb5;
+  padding: 0;
+  margin: 0;
+}
+
+footer p {
+  width: auto;
 }
 
 footer .button-one {
