--- a/scss/_custom/_structures/_main.scss
+++ b/scss/_custom/_structures/_main.scss
@@ -210,6 +210,14 @@
   @media (min-width: 1024px) {
     .project-tile {
       width: 286px;
+
+      img {
+        border-radius: 4px 4px 0 0;
+        background-color: black;
+        max-width: 100%;
+        display: block;
+        height: auto;
+      }
     }
   }
   
@@ -218,25 +226,17 @@
     cursor: pointer;
   }
   
-  .project-tile img {
-    border-radius: 4px 4px 0 0;
-    background-color: black;
-    max-width: 100%;
-    display: block;
-    height: auto;
-  }
-  
   .project-tile-text {
     height: 140px;
     background-color: white;
     border-radius: 0 0 4px 4px;
-  }
-  
-  .project-tile-text p {
-    color: #515151;
-    margin: 10px;
-    font-weight: 400;
-    text-align: left;
+
+    p {
+      color: #515151;
+      margin: 10px;
+      font-weight: 400;
+      text-align: left;
+    }
   }
   
   @media (min-width: 768px) {
@@ -258,15 +258,15 @@
     width: 286px;
     background-color: black;
     border-radius: 4px;
-  }
-  
-  .coming-soon p {
-    display: inline-block;
-    text-align: center;
-    margin: 77px 0 0 28px;
-    padding: 10px;
-    font-size: 30px;
-    border: 3px white solid;
-    color: white;
-    transform: rotate(-35deg);
+
+    p {
+      display: inline-block;
+      text-align: center;
+      margin: 77px 0 0 28px;
+      padding: 10px;
+      font-size: 30px;
+      border: 3px white solid;
+      color: white;
+      transform: rotate(-35deg);
+    }
   }
