--- a/scss/_custom/_structures/_footer.scss
+++ b/scss/_custom/_structures/_footer.scss
@@ -3,7 +3,7 @@
     width: 100%;
     text-align: center;
     background-color: #043d5d;
-    padding: 0;
+    padding: 10px;
     margin: 0;
   }
   
