--- a/scss/_custom/_structures/_main.scss
+++ b/scss/_custom/_structures/_main.scss
@@ -187,86 +187,9 @@
     width: 50%;
     margin-bottom: 10vh;
   }
-  
-  .project-tile {
-    border: none;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    border-radius: 4px;
-    align-items: start;
-    justify-content: center;
-    background-color: black;
-    color: black;
-    margin: 20px 0 0 0;
-    width: 200px;
 
-    img {
-      border-radius: 4px 4px 0 0;
-      background-color: black;
-      max-width: 100%;
-      display: block;
-      height: auto;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .project-tile {
-      width: 180px;
-    }
-  }
-  
   @media (min-width: 1024px) {
-    .project-tile {
-      width: 286px;
-    }
-  }
-  
-  .project-tile:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    cursor: pointer;
-  }
-  
-  .project-tile-text {
-    height: 140px;
-    background-color: white;
-    border-radius: 0 0 4px 4px;
-
-    p {
-      color: #515151;
-      margin: 10px;
-      font-weight: 400;
-      text-align: left;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .project-tile-text p {
-      font-size: 14px;
-      width: auto;
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .project-tile-text p {
-      font-size: 16px;
-      width: auto;
-    }
-  }
-  
-  .coming-soon {
-    height: 215px;
-    width: 286px;
-    background-color: black;
-    border-radius: 4px;
-
-    p {
-      display: inline-block;
-      text-align: center;
-      margin: 77px 0 0 28px;
-      padding: 10px;
-      font-size: 30px;
-      border: 3px white solid;
-      color: white;
-      transform: rotate(-35deg);
+    .projects-inner {
+      width: 65%;
     }
   }
