--- a/css/global.css
+++ b/css/global.css
@@ -476,7 +476,7 @@ template {
 @media (min-width: 1024px) {
   .skills {
     border: 2px solid #449bb5;
-    height: 500px;
+    height: 470px;
     -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
             box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
@@ -500,6 +500,12 @@ template {
         -ms-flex-positive: 1;
             flex-grow: 1;
     width: auto;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
