--- a/scss/_custom/_structures/_main.scss
+++ b/scss/_custom/_structures/_main.scss
@@ -39,7 +39,7 @@
   @media (min-width: 1024px) {
     .skills {
       border: 2px solid #449bb5;
-      height: 500px;
+      height: 470px;
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     }
   }
@@ -58,6 +58,8 @@
     .skills__column {
       flex-grow: 1;
       width: auto;
+      justify-content: flex-start;
+      align-items: center;
     }
   }
   
