--- a/css/global.css
+++ b/css/global.css
@@ -336,10 +336,359 @@ template {
   display: none;
 }
 
+/* Flexbox */
+.flex--column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.flex--row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.flex--centered {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* font variables start */
+/* font variables end */
+/* colour variables start */
+/* colour variables start */
 /* - global import - end */
 /* global styles - start */
+html {
+  scroll-behavior: smooth;
+  font-size: 18px;
+  font-weight: 300;
+  color: #FFF;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  background-color: #449bb5;
+  color: #FFF;
+}
+
+li {
+  list-style: none;
+}
+
 /* global styles - end */
 /* custom import - start */
+/* _elements.scss - start */
+.button {
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 10px 30px;
+  cursor: pointer;
+  color: white;
+  border-radius: 8px;
+}
+
+.button:hover {
+  -webkit-transform: scale(1.02, 1.02);
+          transform: scale(1.02, 1.02);
+}
+
+.button--one {
+  background-color: #428f60;
+  margin: 15px;
+}
+
+.button--two {
+  border: 1px solid #FFF;
+  background-color: #449bb5;
+  margin: 10px;
+}
+
+.button--footer {
+  background-color: #428f60;
+  padding: 7px 15px;
+  margin: 0px 15px 30px 15px;
+  white-space: nowrap;
+}
+
+@media (min-width: 1024px) {
+  .button {
+    font-size: 20px;
+  }
+  .button--footer {
+    padding: 10px 30px;
+  }
+}
+
+/* Font Awesome icons */
+.icon {
+  font-size: 36px;
+  padding-top: 30px;
+  color: #043d5d;
+}
+
+.icon--tools {
+  font-size: 30px;
+}
+
+.icon--footer {
+  font-size: 24px;
+  color: #FFF;
+  border: 2px solid #FFF;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.icon--footer:hover {
+  color: #043d5d;
+  background-color: #FFF;
+}
+
+h1 {
+  font-family: "Roboto Slab", sans-serif;
+  font-size: 26px;
+  font-weight: 300;
+  margin: 0;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: 300;
+  margin: 0 0 15px 0;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 300;
+  margin: 10px 0 20px 0;
+}
+
+h4 {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 10px;
+  color: #000;
+}
+
+h5 {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 12px;
+  width: 75%;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* Medium */
+@media (min-width: 768px) {
+  h1 {
+    font-size: 34px;
+  }
+  h2 {
+    font-size: 26px;
+  }
+  h3 {
+    font-size: 22px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  h5 {
+    font-size: 18px;
+  }
+  p {
+    font-size: 16px;
+    width: 80%;
+  }
+}
+
+/* Large */
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 32px;
+    margin: 0 0 30px 0;
+  }
+  h3 {
+    font-size: 22px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  h5 {
+    font-size: 20px;
+  }
+  h6 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 18px;
+    width: 100%;
+  }
+}
+
+.project-tile {
+  position: relative;
+  border: none;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 200px;
+  height: 160px;
+  border-radius: 8px;
+  background-color: #000;
+  margin: 20px 0;
+}
+
+.project-tile img,
+.project-tile .coming-soon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 8px;
+}
+
+@media (min-width: 768px) {
+  .project-tile {
+    width: 250px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .project-tile {
+    width: 300px;
+    height: 240px;
+  }
+}
+
+.project-tile--green {
+  background-color: #08731C;
+}
+
+.project-tile--purple {
+  background-color: #4F1699;
+}
+
+.project-tile--orange {
+  background-color: #D38C10;
+}
+
+.project-tile__overlay {
+  position: absolute;
+  opacity: 0;
+  color: black;
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.project-tile:hover {
+  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+          box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+
+.project-tile:hover .project-tile__overlay {
+  opacity: 1;
+}
+
+.project-tile:hover img {
+  opacity: 0;
+}
+
+.project-tile:hover .coming-soon {
+  opacity: 0;
+}
+
+.project-tile-text {
+  position: absolute;
+  color: #FFF;
+  font-size: 12px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  margin: 0;
+  width: 80%;
+}
+
+@media (min-width: 768px) {
+  .project-tile-text {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .project-tile-text {
+    font-size: 20px;
+  }
+}
+
+.coming-soon p {
+  display: inline-block;
+  text-align: center;
+  margin: 57px 0 0 12px;
+  padding: 10px;
+  font-size: 22px;
+  border: 3px #FFF solid;
+  border-radius: 8px;
+  color: #FFF;
+  -webkit-transform: rotate(-35deg);
+          transform: rotate(-35deg);
+}
+
+@media (min-width: 768px) {
+  .coming-soon p {
+    margin: 72px 0 0 12px;
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .coming-soon p {
+    margin: 88px 0 0 -14px;
+    font-size: 30px;
+  }
+}
+
+/* _elements.scss - end */
 /** ///////////// - _structures.scss - start - ///////////// */
 .navbar {
   width: 100%;
@@ -369,7 +718,7 @@ template {
 
 .navbar__link {
   text-decoration: none;
-  color: white;
+  color: #FFF;
   margin: 0 0 0 5px;
   font-size: 12px;
   padding: 25px 7px;
@@ -452,7 +801,7 @@ template {
 
 /* Skills section */
 .section__skills {
-  background-color: white;
+  background-color: #FFF;
   height: auto;
 }
 
@@ -464,7 +813,7 @@ template {
 .skills {
   width: 80%;
   height: auto;
-  background-color: white;
+  background-color: #FFF;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: stretch;
@@ -604,7 +953,7 @@ ul {
 .section__projects {
   width: 100%;
   height: auto;
-  background-color: white;
+  background-color: #FFF;
 }
 
 #projects {
@@ -640,356 +989,6 @@ ul {
 }
 
 /** ///////////// - _structures.scss - end - ///////////// */
-/* _elements.scss - start */
-.button {
-  border: none;
-  outline: none;
-  font-size: 16px;
-  font-weight: 300;
-  padding: 10px 30px;
-  cursor: pointer;
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  border-radius: 8px;
-}
-
-.button:hover {
-  -webkit-transform: scale(1.02, 1.02);
-          transform: scale(1.02, 1.02);
-}
-
-.button--one {
-  background-color: #428f60;
-  margin: 15px;
-}
-
-.button--two {
-  border: 1px solid white;
-  background-color: #449bb5;
-  margin: 10px;
-}
-
-.button--footer {
-  background-color: #428f60;
-  padding: 7px 15px;
-  margin: 0px 15px 30px 15px;
-  white-space: nowrap;
-}
-
-@media (min-width: 1024px) {
-  .button {
-    font-size: 20px;
-  }
-  .button--footer {
-    padding: 10px 30px;
-  }
-}
-
-/* Font Awesome icons */
-.icon {
-  font-size: 36px;
-  padding-top: 30px;
-  color: #043d5d;
-}
-
-.icon--tools {
-  font-size: 30px;
-}
-
-.icon--footer {
-  font-size: 24px;
-  color: white;
-  border: 2px solid white;
-  border-radius: 50%;
-  padding: 10px;
-}
-
-.icon--footer:hover {
-  color: #043d5d;
-  background-color: white;
-}
-
-html {
-  scroll-behavior: smooth;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  color: white;
-}
-
-body {
-  margin: auto;
-  height: 100%;
-  width: 100%;
-  background-color: #449bb5;
-  color: white;
-}
-
-li {
-  list-style: none;
-}
-
-h1 {
-  font-family: 'Roboto Slab', sans-serif;
-  font-size: 26px;
-  font-weight: 300;
-  margin: 0;
-}
-
-h2 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 22px;
-  font-weight: 300;
-  margin: 0 0 15px 0;
-}
-
-h3 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  margin: 10px 0 20px 0;
-}
-
-h4 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  margin: 10px;
-  color: black;
-}
-
-h5 {
-  font-size: 16px;
-  font-weight: 300;
-}
-
-p {
-  font-size: 12px;
-  width: 75%;
-  text-align: center;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-/* Medium */
-@media (min-width: 768px) {
-  h1 {
-    font-size: 34px;
-  }
-  h2 {
-    font-size: 26px;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  h4 {
-    font-size: 16px;
-  }
-  h5 {
-    font-size: 18px;
-  }
-  p {
-    font-size: 16px;
-    width: 80%;
-  }
-}
-
-/* Large */
-@media (min-width: 1024px) {
-  h1 {
-    font-size: 40px;
-  }
-  h2 {
-    font-size: 32px;
-    margin: 0 0 30px 0;
-  }
-  h3 {
-    font-size: 22px;
-  }
-  h4 {
-    font-size: 20px;
-  }
-  h5 {
-    font-size: 20px;
-  }
-  h6 {
-    font-size: 16px;
-  }
-  p {
-    font-size: 18px;
-    width: 100%;
-  }
-}
-
-/* Flexbox */
-.flex--column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.flex--row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.flex--centered {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.project-tile {
-  position: relative;
-  border: none;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 200px;
-  height: 160px;
-  border-radius: 8px;
-  background-color: black;
-  margin: 20px 0;
-}
-
-.project-tile img,
-.project-tile .coming-soon {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border-radius: 8px;
-}
-
-@media (min-width: 768px) {
-  .project-tile {
-    width: 250px;
-    height: 200px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .project-tile {
-    width: 300px;
-    height: 240px;
-  }
-}
-
-.project-tile--green {
-  background-color: #08731C;
-}
-
-.project-tile--purple {
-  background-color: #4F1699;
-}
-
-.project-tile--orange {
-  background-color: #D38C10;
-}
-
-.project-tile__overlay {
-  position: absolute;
-  opacity: 0;
-  color: black;
-  -webkit-transition: .7s ease;
-  transition: .7s ease;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-}
-
-.project-tile:hover {
-  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-          box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  cursor: pointer;
-}
-
-.project-tile:hover .project-tile__overlay {
-  opacity: 1;
-}
-
-.project-tile:hover img {
-  opacity: 0;
-}
-
-.project-tile:hover .coming-soon {
-  opacity: 0;
-}
-
-.project-tile-text {
-  position: absolute;
-  color: white;
-  font-size: 12px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-  margin: 0;
-  width: 80%;
-}
-
-@media (min-width: 768px) {
-  .project-tile-text {
-    font-size: 16px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .project-tile-text {
-    font-size: 20px;
-  }
-}
-
-.coming-soon p {
-  display: inline-block;
-  text-align: center;
-  margin: 57px 0 0 12px;
-  padding: 10px;
-  font-size: 22px;
-  border: 3px white solid;
-  border-radius: 8px;
-  color: white;
-  -webkit-transform: rotate(-35deg);
-          transform: rotate(-35deg);
-}
-
-@media (min-width: 768px) {
-  .coming-soon p {
-    margin: 72px 0 0 12px;
-    font-size: 22px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .coming-soon p {
-    margin: 88px 0 0 -14px;
-    font-size: 30px;
-  }
-}
-
-/* _elements.scss - end */
 /* custom import - end */
 /* global.scss - end */
 /*# sourceMappingURL=global.css.map */
