--- a/scss/_custom/_elements/_button.scss
+++ b/scss/_custom/_elements/_button.scss
@@ -5,7 +5,6 @@
   font-weight: 300;
   padding: 10px 30px;
   cursor: pointer;
-  font-family: 'Roboto', sans-serif;
   color: white;
   border-radius: 8px;
 }
@@ -15,18 +14,18 @@
 }
 
 .button--one {
-  background-color: #428f60;
+  background-color: $color-tertiary;
   margin: 15px;
 }
 
 .button--two {
-  border: 1px solid white;
-  background-color:#449bb5;
+  border: 1px solid $color-white;
+  background-color: $color-secondary;
   margin: 10px;
 }
 
 .button--footer {
-  background-color: #428f60;
+  background-color: $color-tertiary;
   padding: 7px 15px;
   margin: 0px 15px 30px 15px;
   white-space: nowrap;
