--- a/scss/_custom/_elements/_icon.scss
+++ b/scss/_custom/_elements/_icon.scss
@@ -3,7 +3,7 @@
 .icon {
   font-size: 36px;
   padding-top: 30px;
-  color: #043d5d;
+  color: $color-primary;
 }
 
 .icon--tools {
@@ -12,13 +12,13 @@
 
 .icon--footer {
   font-size: 24px;
-  color: white;
-  border: 2px solid white;
+  color: $color-white;
+  border: 2px solid $color-white;
   border-radius: 50%;
   padding: 10px;
 }
 
 .icon--footer:hover {
   color: #043d5d;
-  background-color: white;
+  background-color: $color-white;
 }
