--- a/scss/_custom/_elements/_text.scss
+++ b/scss/_custom/_elements/_text.scss
@@ -1,50 +1,27 @@
-html {
-  scroll-behavior: smooth;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  color: white;
-}
-  
-body {
-  margin: auto;
-  height: 100%;
-  width: 100%;
-  background-color: #449bb5;
-  color: white;
-}
-
-li {
-  list-style: none;
-}
-
 h1 {
-  font-family: 'Roboto Slab', sans-serif;
+  font-family: $font-secondary;
   font-size: 26px;
   font-weight: 300;
   margin: 0;
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
   font-size: 22px;
   font-weight: 300;
   margin: 0 0 15px 0;
 }
 
 h3 {
-  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 300;
   margin: 10px 0 20px 0;
 }
 
 h4 {
-  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
   margin: 10px;
-  color: black;
+  color: $color-black;
 }
 
 h5 {
@@ -60,7 +37,6 @@ p {
 
 a {
   text-decoration: none;
-  color: white;
 }
 
 /* Medium */
@@ -122,20 +98,4 @@ a {
     font-size: 18px;
     width: 100%;
   }
-}
-
-/* Flexbox */
-.flex--column {
-  display: flex;
-  flex-direction: column;
-}
-
-.flex--row {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex--centered {
-  align-items: center;
-  justify-content: center;
 }
