--- a/scss/_custom/_structures/_footer.scss
+++ b/scss/_custom/_structures/_footer.scss
@@ -2,7 +2,7 @@
     height: 40%;
     width: 100%;
     text-align: center;
-    background-color: #043d5d;
+    background-color: $color-primary;
     padding: 10px;
     margin: 0;
   }
