--- a/scss/_custom/_structures/_main.scss
+++ b/scss/_custom/_structures/_main.scss
@@ -5,7 +5,7 @@
   /* About section */
   .section__about {
     height: 130vh;
-    background-color: #043d5d;
+    background-color: $color-primary;
   }
   
   .about__title {
@@ -18,7 +18,7 @@
   
   /* Skills section */
   .section__skills {
-    background-color: white;
+    background-color: $color-white;
     height: auto;
   }
   
@@ -30,7 +30,7 @@
   .skills {
     width: 80%;
     height: auto;
-    background-color: white;
+    background-color: $color-white;
     flex-wrap: wrap;
     justify-content: stretch;
     border-radius: 8px;
@@ -38,7 +38,7 @@
   
   @media (min-width: 1024px) {
     .skills {
-      border: 2px solid #449bb5;
+      border: 2px solid $color-secondary;
       height: 470px;
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     }
@@ -50,7 +50,7 @@
     height: 100%;
     color: #043d5d;
     justify-content: start;
-    border: 2px solid #449bb5;
+    border: 2px solid $color-secondary;
     text-align: center;
   }
   
@@ -165,7 +165,7 @@
   .section__projects {
     width: 100%;
     height: auto;
-    background-color: white;
+    background-color: $color-white;
   }
   
   #projects {
