--- a/scss/_custom/_structures/_navigationbar.scss
+++ b/scss/_custom/_structures/_navigationbar.scss
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 60px;
-    background-color: #449bb5;
+    background-color: $color-secondary;
     position: fixed;
     align-items: stretch;
     justify-content: flex-end;
@@ -22,7 +22,7 @@
   
   .navbar__link {
     text-decoration: none;
-    color: white;
+    color: $color-white;
     margin: 0 0 0 5px;
     font-size: 12px;
     padding: 25px 7px;
@@ -45,7 +45,7 @@
   }
   
   .navbar__link:hover {
-    background-color: #043d5d;
+    background-color: $color-primary;
   }
   
   .navbar__link--name {
