Update - Tile colors

--- a/css/global.css
+++ b/css/global.css
@@ -597,11 +597,11 @@ a {
 }
 
 .project-tile--purple {
-  background-color: #4F1699;
+  background-color: #D35728;
 }
 
 .project-tile--orange {
-  background-color: #D38C10;
+  background-color: #449bb5;
 }
 
 .project-tile__overlay {
