--- a/scss/_custom/_elements/_tile.scss
+++ b/scss/_custom/_elements/_tile.scss
@@ -38,11 +38,11 @@
   }
 
   .project-tile--purple {
-    background-color: #4F1699;
+    background-color: #D35728;
   }
 
   .project-tile--orange {
-    background-color: #D38C10;
+    background-color: $color-secondary;
   }
 
 
