--- a/scss/_custom/_variables.scss
+++ b/scss/_custom/_variables.scss
@@ -8,9 +8,12 @@ $font-secondary: 'Roboto Slab', sans-serif;
 /* colour variables start */
 $color-white: #FFF;
 $color-black: #000;
+
 $color-dark-blue: #043d5d;
 $color-light-blue: #449bb5;
+
 $color-green: #428f60;
+$color-green-hover: #3b8056;
 
 $color-primary: $color-dark-blue;
 $color-secondary: $color-light-blue;
