--- a/scss/_custom/_elements/_button.scss
+++ b/scss/_custom/_elements/_button.scss
@@ -3,15 +3,16 @@
   outline: none;
   font-size: 16px;
   font-weight: 300;
-  padding: 10px 30px;
+  padding: 10px 28px;
   cursor: pointer;
-  color: white;
-  border-radius: 8px;
-  transition: 0.2s;
+  color: #ffffff;
+  border: 2px solid $color-green;
+  border-radius: 1000px;
+  transition: ease 0.3s;
 }
 
 .button:hover {
-  background-color: #3b8056;
+  background-color: $color-primary;
 }
 
 .button--one {
@@ -28,7 +29,6 @@
 .button--footer {
   background-color: $color-tertiary;
   padding: 7px 15px;
-  margin: 0px 15px 30px 15px;
   white-space: nowrap;
 }
 
