--- a/scss/_custom/_elements/_icon.scss
+++ b/scss/_custom/_elements/_icon.scss
@@ -16,7 +16,7 @@
   border: 2px solid $color-white;
   border-radius: 50%;
   padding: 10px;
-  transition: 0.2;
+  transition: ease 0.3s;
 }
 
 .icon--footer:hover {
