--- a/scss/_custom/_structures/_footer.scss
+++ b/scss/_custom/_structures/_footer.scss
@@ -1,10 +1,9 @@
 .footer {
-    height: 40%;
     width: 100%;
     text-align: center;
     background-color: $color-primary;
-    padding: 10px;
     margin: 0;
+    padding-top: 5%;
   }
   
   .footer__contact {
@@ -24,9 +23,17 @@
   }
   
   .footer__links {
-    margin: 10px;
+    margin: 3%;
   }
 
   .footer__link {
     padding: 4px;
+  }
+
+  .footer__name {
+    width: 100%;
+    background-color: $color-black;
+    opacity: 0.5;
+    padding: 3%;
+    margin: 0;
   }
