--- a/scss/_custom/_structures/_navigationbar.scss
+++ b/scss/_custom/_structures/_navigationbar.scss
@@ -26,7 +26,7 @@
     margin: 0 0 0 5px;
     font-size: 12px;
     padding: 25px 7px;
-    transition: 0.2s;
+    transition: ease 0.3s;
   }
   
   @media (min-width: 768px) {
