--- a/scss/_custom/_elements/_icon.scss
+++ b/scss/_custom/_elements/_icon.scss
@@ -11,15 +11,22 @@
 }
 
 .icon--footer {
-  font-size: 24px;
-  color: $color-white;
-  border: 2px solid $color-white;
-  border-radius: 50%;
-  padding: 10px;
+  font-size: 18px;
+  color: $color-secondary;
+  border: 2px solid $color-secondary;
+  border-radius: 1000px;
+  padding: 8px;
   transition: ease 0.3s;
+}
+
+@media (min-width: 768px) {
+  .icon--footer {
+    font-size: 24px;
+    padding: 10px;
+  }
 }
 
 .icon--footer:hover {
   color: #043d5d;
-  background-color: $color-white;
+  background-color: $color-secondary;
 }
