--- a/scss/_custom/_elements/_button.scss
+++ b/scss/_custom/_elements/_button.scss
@@ -17,7 +17,7 @@
 }
 
 .button--one {
-  background-color: $color-tertiary;
+  background-color: $color-green;
   margin: 15px;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .button--footer {
-  background-color: $color-tertiary;
+  background-color: $color-green;
   padding: 7px 15px;
   white-space: nowrap;
 }
