--- a/scss/_custom/_structures.scss
+++ b/scss/_custom/_structures.scss
@@ -1,6 +1,9 @@
 /** ///////////// - _structures.scss - start - ///////////// */
 @import '_structures/_header';
 @import '_structures/_navigationbar';
-@import '_structures/_footer';
 @import '_structures/_main';
+@import '_structures/_aboutsection';
+@import '_structures/_skillssection';
+@import '_structures/_profilesection';
+@import '_structures/_footer';
 /** ///////////// - _structures.scss - end - ///////////// */
