--- a/scss/_custom/_variables.scss
+++ b/scss/_custom/_variables.scss
@@ -8,8 +8,10 @@ $font-secondary: 'Roboto Slab', sans-serif;
 /* colour variables start */
 $color-white: #FFF;
 $color-black: #000;
+$color-grey: #b3b3b3;
 
 $color-dark-blue: #043d5d;
+$color-darker-blue: #051f2f;
 $color-light-blue: #449bb5;
 
 $color-green: #428f60;
@@ -17,6 +19,6 @@ $color-green-hover: #3b8056;
 
 $color-primary: $color-dark-blue;
 $color-secondary: $color-light-blue;
-$color-tertiary: $color-green;
+$color-tertiary: $color-darker-blue;
 
 /* colour variables start */
