--- a/scss/_custom/_structures/_footer.scss
+++ b/scss/_custom/_structures/_footer.scss
@@ -1,21 +1,20 @@
 .footer {
+    height: 60vh;
     width: 100%;
-    text-align: center;
     background-color: $color-primary;
     margin: 0;
     padding-top: 5%;
   }
+
+  .footer__container {
+    width: 90%;
+    height: 83%;
+    margin: 0 5% 5% 5%;
+  }
   
   .footer__contact {
     border-radius: 8px;
-    width: 80%;
-    height: 30vh;
-    margin: 20px;
-    margin-bottom: -15vh;
-  }
-  
-  .contact__text {
-    width: auto;
+    width: 60%;
   }
   
   .footer .button-one {
@@ -23,7 +22,7 @@
   }
   
   .footer__links {
-    margin: 3%;
+    width: 25%;
   }
 
   .footer__link {
@@ -31,9 +30,10 @@
   }
 
   .footer__name {
-    width: 100%;
-    background-color: $color-black;
-    opacity: 0.5;
+    width: 94%;
+    background-color: $color-tertiary;
+    color: $color-grey;
     padding: 3%;
     margin: 0;
+    text-align: center;
   }
