--- a/scss/_custom/_structures/_main.scss
+++ b/scss/_custom/_structures/_main.scss
@@ -2,196 +2,16 @@
     width: 100%;
   }
   
-  /* About section */
-  .section__about {
+  /* welcome section */
+  .section__welcome {
     height: 130vh;
     background-color: $color-primary;
   }
   
-  .about__title {
+  .welcome__title {
     padding-top: 70px;
   }
   
-  .about {
+  .welcome {
     margin-top: -30vh;
-  }
-  
-  /* Skills section */
-  .section__skills {
-    background-color: $color-white;
-    height: auto;
-  }
-  
-  #skills {
-    padding-top: 10vh;
-    margin-top: -40vh;
-  }
-  
-  .skills {
-    width: 80%;
-    height: auto;
-    background-color: $color-white;
-    flex-wrap: wrap;
-    justify-content: stretch;
-    border-radius: 8px;
-    }
-  
-  @media (min-width: 1024px) {
-    .skills {
-      border: 2px solid $color-secondary;
-      height: 470px;
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    }
-  }
-  
-  .skills__column {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    color: #043d5d;
-    justify-content: start;
-    border: 2px solid $color-secondary;
-    text-align: center;
-  }
-  
-  @media (min-width: 1024px) {
-    .skills__column {
-      flex-grow: 1;
-      width: auto;
-      justify-content: flex-start;
-      align-items: center;
-    }
-  }
-  
-  .skills__column--first {
-    border-radius: 8px 8px 0 0;
-  }
-  
-  .skills__column--middle {
-    border-radius: 0;
-    border-bottom: 0;
-    border-top: 0;
-  }
-  
-  .skills__column--last{
-    border-radius: 0 0 8px 8px;
-  }
-  
-  @media (min-width: 1024px) {
-    .skills__column--first {
-      border: none;
-    }
-    
-    .skills__column--last{
-      border: none;
-    }
-  }
-  
-  .skills__title {
-    color: black;
-    font-size: 16px;
-    font-weight: 900;
-  }
-  
-  .skills__subtitle {
-    font-size: 14px;
-    font-weight: 900;
-    margin: 0;
-  }
-  
-  ul {
-    padding: 0;
-    margin: 5px 0 25px 0;
-  }
-  
-  .skills__list {
-    font-size: 14px;
-    padding: 0;
-    color: black;
-  }
-  
-  @media (min-width: 768px) {
-    .icon--tools {
-      font-size: 32px;
-    }
-  
-    .skills__title {
-      font-size: 18px;
-    }
-  
-    .skills__subtitle {
-      font-size: 16px;
-    }
-  
-    .skills__list {
-      font-size: 16px;
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .icon--tools {
-      font-size: 36px;
-    }
-  
-    .skills__title {
-      font-size: 22px;
-    }
-  
-    .skills__subtitle {
-      font-size: 20px;
-    }
-  
-    .skills__list {
-      font-size: 20px;
-    }
-  }
-  
-  /* Profile link */
-  .profile-links {
-    text-decoration: none;
-    font-size: 16px;
-    color: white;
-    margin: 0;
-  }
-  
-  /* Large */
-  @media (min-width: 1024px) {
-  .profile-links{
-      font-size: 20px;
-    }
-  }
-  
-  /* Projects section */
-  .section__projects {
-    width: 100%;
-    height: auto;
-    background-color: $color-white;
-  }
-  
-  #projects {
-    padding-top: 15vh;
-  }
-  
-  .projects__title {
-    color: #043d5d;
-    font-weight: 400;
-  }
-  
-  .projects__text {
-    color: #043d5d;
-    font-weight: 400;
-  }
-  
-  .projects-inner {
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 50%;
-    margin-bottom: 10vh;
-  }
-
-  @media (min-width: 1024px) {
-    .projects-inner {
-      width: 65%;
-    }
   }
