--- a/scss/_custom/_structures/_navigationbar.scss
+++ b/scss/_custom/_structures/_navigationbar.scss
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 60px;
-    background-color: $color-secondary;
+    background-color: $color-primary;
     position: fixed;
     align-items: stretch;
     justify-content: flex-end;
@@ -27,6 +27,7 @@
     font-size: 12px;
     padding: 25px 7px;
     transition: ease 0.3s;
+    position: relative;
   }
   
   @media (min-width: 768px) {
@@ -46,9 +47,31 @@
   }
   
   .navbar__link:hover {
-    background-color: $color-primary;
+    color: $color-white;
   }
-  
+
+  .navbar__link:before {
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 4px;
+    bottom: 17%;
+    left: 5%;
+    border-radius: 20px;
+    background-color: #449bb5;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  .navbar__link:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
   .navbar__link--name {
     margin: 0 auto 0 0;
   }
