--- a/scss/_custom/_structures/_aboutsection.scss
+++ b/scss/_custom/_structures/_aboutsection.scss
@@ -55,7 +55,7 @@
 
   .about__image {
     position: relative;
-    max-height: 300px;
+    max-height: 60%;
     display: block;
     border-radius: 8px;
   }
